syntax = "proto3";

package examples.weather.v1;

option go_package = "github.com/mcpxy/core/proto/examples/weather/v1";

service WeatherService {
  rpc GetWeather(GetWeatherRequest) returns (GetWeatherResponse);
}

message GetWeatherRequest {
  string location = 1;
}

message GetWeatherResponse {
  string weather = 1;
}
